# tg_bots

./: .editorconfig  .env.example  .env.prod.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  qodana.yaml  requirements-all.txt  requirements-dev.txt  requirements-full.txt  requirements.txt
.github/workflows/: ci-meta.yml  ci.yml  lockfile-check.yml  qodana_code_quality.yml
.run/: pre-commit.run.xml
bots/echo_bot/app/: main.py
bots/echo_bot/locales/en/LC_MESSAGES/: messages.po
bots/echo_bot/locales/ru/LC_MESSAGES/: messages.po
bots/questionnaire_bot/: .env.example
bots/questionnaire_bot/app/: main.py
bots/questionnaire_bot/app/filters/: i18n_text.py
bots/questionnaire_bot/app/handlers/: questionnaire.py
bots/questionnaire_bot/app/keyboards/: inline.py  reply.py
bots/questionnaire_bot/locales/en/LC_MESSAGES/: messages.po
bots/questionnaire_bot/locales/ru/LC_MESSAGES/: messages.po
libs/common/: config.py  logger.py  root_resolver.py
libs/common/aiogram/: error_handler.py  i18n.py  linked_states_group.py
libs/common/middleware/: keyboard_cleanup_middleware.py  rate_limit_middleware.py
locales/en/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
makefiles/: common.mk  dev.mk  i18n.mk  setup.mk
scripts/: compile_locales.py
scripts/badge/: badge_amend.py  gen_badge.py
tests/: conftest.py
tests/libs/common/: test_config.py  test_root_resolver.py
tests/libs/common/aiogram/: test_error_handler.py  test_i18n.py  test_linked_states_group.py
tests/scripts/: test_compile_locales.py
tests/scripts/badge/: test_badge_amend.py  test_gen_badge.py
