[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-bots"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.10,<4",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "colorlog>=6.8"
]
[project.optional-dependencies]
dev = [
  "ruff>=0.12.11",
  "black>=25.1.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "mypy>=1.17.1",
  "pre-commit>=3.7",
  "coverage[toml]>=7.6",
  "anybadge>=1.16",
  "pip-audit>=2.7",
  "types-PyYAML>=6.0.12.20250822",
  "pytest-builtin-types",
  "types-requests",
  "polib>=1.2",
  "types-polib>1.2"
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
echo-bot = "bots.echo_bot.app.main:main"
questionnaire-bot = "bots.questionnaire_bot.app.main:main"

# ---------- Black ----------
[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = false

# ---------- Ruff (новая схема 0.6+) ----------
[tool.ruff]
line-length = 100
target-version = "py311"
respect-gitignore = true
exclude = ["*.j2"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PT", "RUF", "C4", "ANN"]
ignore = ["RUF001", "RUF002", "RUF003"]
# Часто удобно игнорить F401 в __init__.py, где реэкспортируем API:
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.lint.isort]
known-first-party = ["bots", "libs", "scripts"]
combine-as-imports = true
lines-after-imports = 2

# Форматирование отдадим Black; Ruff не будет форматить код как форматтер.
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
strict_optional = false
disallow_untyped_defs = false
files = ["scripts", "libs", "bots"]
exclude = "(?i)^(venv|\\.venv|build|dist|\\.git)(/|$)"
cache_dir = ".mypy_cache"

# Аналог [mypy-aiogram.*]
[[tool.mypy.overrides]]
module = ["aiogram.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anybadge.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["colorlog.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic_settings.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["polib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["bots", "libs", "scripts"]

[tool.coverage.run]
branch = true
source = ["bots", "libs", "scripts"]
relative_files = true
omit = [
  "*/.venv/*",
  "*/.venv-wsl/*",
  "tests/**",
  "**/__init__.py",
  "**/__main__.py",
]
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 0
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
